Some logic changes to allow for break timer too

--- a/countdown.html
+++ b/countdown.html
@@ -1,9 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
+  <title>Pomo Timer</title>
+
+
 
 </head>
 <body>
@@ -11,7 +14,7 @@
 
   <div class="container">
       <button id="tomato" type="button" onclick="updateDuration()">
-        🍅
+        🥜
       </button>
 
     <div id="countdown">50:00</div>
